ThirdParty/mojoshader/unit_tests/preprocessor/errors/redefinition.correct
preprocessor/errors/redefinition:3: ERROR: 'x' already defined
